--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@google/model-viewer": "^4.0.0",
     "cra-template": "1.2.0",
+    "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
-    "three": "^0.171.0"
+    "three": "^0.169.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,7 +38,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.16",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   }
 }
