`feat: Implement user authentication and profile management with Firebase Auth and Firestore`

--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,9 @@
         "destination": "/"
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
